--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,7 @@
       "username": "root",
       "password": null,
       "database": "database_production",
-      "host": "127.0.0.1",
+      "host": "https://burger-app-20201114.herokuapp.com/",
       "dialect": "mysql"
     }
   }
